Reverts css change due to issues on iPhone 5 landscape playing video

--- a/src/components/titlevideo/titlevideo.css
+++ b/src/components/titlevideo/titlevideo.css
@@ -277,7 +277,7 @@
     }
 
     .title-wrapper.bottomPaddingLarge {
-        padding-bottom: 140px;
+        padding-bottom: 0px;
     }
 
     .Title-Section-Video > h2 {
